# ZUMBLE

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
src/: channel.rs  clean.rs  client.rs  crypt.rs  error.rs  main.rs  metrics.rs  server.rs  state.rs  target.rs  varint.rs  voice.rs
src/handler/: authenticate.rs  channel_state.rs  crypt_setup.rs  mod.rs  permission_query.rs  ping.rs  user_state.rs  version.rs  voice_packet.rs  voice_target.rs
src/http/: deaf.rs  metrics.rs  mod.rs  mute.rs  status.rs
src/message/: mod.rs
src/proto/: mod.rs  mumble.proto  mumble.rs
src/server/: mod.rs  tcp.rs  udp.rs
src/sync/: mod.rs  rwlock.rs
